entretenimiento html hmwk 8

--- a/ciudad html/about.html
+++ b/ciudad html/about.html
@@ -11,9 +11,10 @@
             <li><a href="about.html">About</a></li>
             <li><a href="acomodation.html">Acomodation</a></li>
             <li><a href="visits_activities.html">Visits and Activities</a></li>
+            <li><a href="entertainment.html">Entretenimiento</a></li>
         </ul>
     </nav>
-    <h1>Informacion General</h1>
+    ><center><h1>Informacion General</h1>
         <main>
         <p>
             El <em>Himalaya</em>  (del sánscrito हिमालय, himālaya [pr. jimaalaia], donde hima, ‘nieve’, y ālaya, ‘morada’, ‘lugar’) es una cordillera situada en el continente asiático, y se extiende por varios países: <em>Bután, Nepal, China, Birmania, India y Pakistán.</em><br>
@@ -29,6 +30,6 @@
             La placa de la India empuja y distorsiona la litosfera asiática en más de 3000 km al norte de los <em>Himalayas</em>.<br> El Tíbet está cortado por grandes fallas que absorben esta deformación.<br> En el lado este del empuje de la India, la cadena de Arakan y las islas de Andaman y Nicobar en el océano Índico también han sido creadas por el movimiento entre la India y Eurasia.<br>
             
             Esta intensa actividad tectónica hace que la región sea muy activa desde el punto de vista sísmico.<br> Por otra parte, están documentados en el extremo sur de los <em>Himalayas</em> terremotos históricos de magnitud 8 o más.</p>
-        </main>
+        </main></center>
 </body>
 </html>
