--- a/ciudad html/acomodation.html
+++ b/ciudad html/acomodation.html
@@ -6,12 +6,13 @@
     </head>
     <body>
 <div>
+    <a href="about.html">Home</a><br>
     <a href="#Hotel Himalaya">Hotel</a>
     <a href="#Himalaya Drishya Resort">Resort</a>
     <a href="#Himalayan woods cottage">Cottage</a>
 </div>
 <div>
-    <table border="1" cellpadding="6" cellspacing="1">
+    <center><table border="1" cellpadding="6" cellspacing="1">
         <caption><i>Hotel</i></caption>
         <thead>
             <th>Name</th>
@@ -46,7 +47,7 @@
                     width="400" height="300"></td>
             </tr>
         </tbody>
-    </table>
+    </table></center>
 </div>
     </body>
 </html>
