--- a/ciudad html/index.html
+++ b/ciudad html/index.html
@@ -6,7 +6,7 @@
         <title> Himalaya </title>
     </head>
     <body>
-        <h1>Bienvenidos al HIMALAYA</h1>
+        <center><h1>Bienvenidos al HIMALAYA</h1>
         
         <img
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Himalaya_composite.jpg/640px-Himalaya_composite.jpg"
@@ -14,6 +14,6 @@
             title="vista saltelital de la cordillera del Himalaya"
             width="900" height="500"
             />
-            <a href="about.html"> <h3><b>CONOCELOS!</b></h3></a>
+            <a href="about.html"> <h3><b>CONOCELOS!</b></h3></a></center>
     </body>
 </html>
