--- a/ciudad html/visits_activities.html
+++ b/ciudad html/visits_activities.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <li><a href="about.html">Home</a></li>
     <h1>Visits and Activities</h1>
     <ol>
         <li><h2>Deportes</h2></li>
