--- a/ciudad html/about.html
+++ b/ciudad html/about.html
@@ -9,12 +9,13 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="acomodation.html">Acomodation</a></li>
+            <li><a href="acomodation.html">Alojamiento</a></li>
             <li><a href="visits_activities.html">Visits and Activities</a></li>
             <li><a href="entertainment.html">Entretenimiento</a></li>
+            <li><a href="form.html">Contactanos</a></li>
         </ul>
     </nav>
-    ><center><h1>Informacion General</h1>
+    <center><h1>Informacion General</h1>
         <main>
         <p>
             El <em>Himalaya</em>  (del sánscrito हिमालय, himālaya [pr. jimaalaia], donde hima, ‘nieve’, y ālaya, ‘morada’, ‘lugar’) es una cordillera situada en el continente asiático, y se extiende por varios países: <em>Bután, Nepal, China, Birmania, India y Pakistán.</em><br>
