--- a/ciudad html/index.html
+++ b/ciudad html/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+       
         <meta charset="utf-8">
         <meta name="viewport" content="width = device - width, initial-scale= 1.0">
         <title> Himalaya </title>
+        <link rel="stylesheet" href="index.css"/>
     </head>
     <body>
         <center><h1>Bienvenidos al HIMALAYA</h1>
